Fix: align sign up text and link

--- a/public/style.css
+++ b/public/style.css
@@ -72,8 +72,8 @@
 
 }
 
-.signup {
-    margin-left: 40px;
+.signup-text , .signup-link{
+    display: inline-block;
 }
 
 
